# prime.py

pack/: LICENCE  README.md  pyproject.toml
pack/src/Raviteja1824/: Prime.py  __init__.py
