[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Raviteja1024"
version = "0.0.1"
authors = [
  { name="ravi", email="ravitejaamancha@luciddatahub.com" },
]
description = "A small prime function package "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Raviteja0524/prime.py.git"
